@@ -1,10 +1,19 @@
+2013-04-19 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* devtools/gen-avr-lib-tree.sh: De-POSIXify the shell usage, since
+	Solaris' /bin/sh is not POSIX-aware.  For the remaining tools,
+	their POSIXish variants can be chosen by prepending the PATH with
+	/usr/xpg4/bin (doesn't harm for non-Solaris systems), but as for
+	the shell this script is running under, the only other option
+	were to let autoconf detect it, which is a bit of overkill.
+
 2013-03-29 Mike Rice <mike@mikerice.name>
 
 	* libc/time: (New directory.)
 	* include/time.h: (New file.)
 	* include/util/eu_dst.h: (New file.)
 	* include/util/usa_dst.h: (New file.)
-		
+
 2013-03-19 Joerg Wunsch <joerg.wunsch@atmel.com>
 
 	* devtools/gen-avr-lib-tree.sh: Add ATmega64RFR2, ATmega644RFR2,
